src-liberty_parse-2.6/test/example.ffbank.ref



reading example.ffbank.lib...
... Done. 


Checking the database...

NOTE: The technology cmos was specified.
NOTE: No delay_model attribute specified in the library; the delay_model 'generic_cmos' is assumed.
NOTE: Using the cmos syntax tables...
ERROR: example.ffbank.lib:58, This ff_bank, with width 32, does not match the referenced bus D (line 48), whose width is 16 (Semantic Error found in data.)
ERROR: example.ffbank.lib:61, This ff_bank, with width 16, does not match the referenced bus E (line 51), whose width is 32 (Semantic Error found in data.)
Errors detected

... Done. 


Stats:


Library example:
   cells: 2

Quitting..
Done....
