src-liberty_parse-2.6/test/example.buspindir.lib
library(example) {	
	technology(cmos);

	 lu_table_template(t111){
		variable_1 : total_output_net_capacitance;
		variable_2 : input_net_transition;
		index_1 ("1.00, 2.00, 3.00, 4.00");
		index_2 ("1.00, 2.00, 3.00, 4.00, 5.00");
	}
	cell(AN2){
		area : 2;
		pin(A, B){
			direction : input;
			capacitance : 1;
		}
		pin(Z){
			direction : output;
			function : "A ^ B";
			timing () {
				intrinsic_rise  : 0.49;
				intrinsic_fall  : 0.77;
				rise_resistance : 0.1443;
				fall_resistance : 0.0523;
				related_pin : "A B";

				rise_transition(t111) {
					index_1("0.500000,4.000000,8.000000,20.000000");
					index_2("0.010000,0.300000,0.900000,3.100000,6.000000");
					values(\
						" 0.022100, 0.026300, 0.058600, 0.077300, 0.113200",\
						" 0.102800, 0.107300, 0.115700, 0.135200, 0.183300",\
						" 0.223900, 0.225000, 0.228300, 0.258900, 0.301700",\
						" 1.159500, 1.159300, 1.160100, 1.168500, 1.182000");
				}
				fall_transition(scalar){
					values("0.2") ;
				}
			}
		}
		bundle( bun1 ) {
			direction : input;
			pin( p1 ) {
				direction : output;
			}
		}
		bus( bun1 ) {
			direction : input;
			pin( p1 ) {
				direction : output;
			}
		}
	}
	cell(OR2){
		area : 2;
		pin(A, B){
			direction : input;
			capacitance : 1;
		}
		pin(Z){
			direction : output;
			function : "A + B";
			timing () {
				intrinsic_rise  : 0.38;
				intrinsic_fall  : 0.85;
				rise_resistance : 0.1443;
				fall_resistance : 0.0589;
				related_pin : "A B";
			}
		}	
	}
}
